Add board and sector management: introduce Board and BoardService classes, update Sector and related entities with new properties for ownership, color, resources, and neighbors, and implement necessary mappings and controller endpoints.