@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonDeserializer;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
+import com.mg.nmlonline.domain.model.board.Resource;
 import com.mg.nmlonline.domain.model.equipment.Equipment;
 import com.mg.nmlonline.domain.model.equipment.EquipmentFactory;
 import com.mg.nmlonline.domain.model.unit.Unit;
@@ -23,18 +24,61 @@ import java.util.*;
 public class Sector {
     private int number;
     private String name;
-    private double income = 2000 ;
+    private double income = 2000;
     private List<Unit> army = new ArrayList<>();
     private SectorStats stats = new SectorStats();
+
+    // === NOUVELLES DONNÉES POUR LA CARTE ===
+    private Integer ownerPlayerId; // null si secteur neutre/vide
+    private String color; // couleur déterminée par l'owner, blanc (#ffffff) par défaut
+    private Resource resource; // ressource du secteur (joyaux, or, cigares, etc.)
+    private List<Integer> neighbors = new ArrayList<>(); // liste des numéros de secteurs voisins
 
     public Sector(int number) {
         this.number = number;
         this.name = "Secteur n°" + number;
+        this.color = "#ffffff"; // blanc par défaut
     }
 
     public Sector(int number, String name) {
         this.number = number;
         this.name = name;
+        this.color = "#ffffff"; // blanc par défaut
+    }
+
+    // === GESTION DES VOISINS ===
+
+    public void addNeighbor(int neighborNumber) {
+        if (!neighbors.contains(neighborNumber) && neighborNumber != this.number) {
+            neighbors.add(neighborNumber);
+        }
+    }
+
+    public void removeNeighbor(int neighborNumber) {
+        neighbors.remove((Integer) neighborNumber);
+    }
+
+    public boolean isNeighbor(int sectorNumber) {
+        return neighbors.contains(sectorNumber);
+    }
+
+    public List<Integer> getNeighbors() {
+        return Collections.unmodifiableList(neighbors);
+    }
+
+    // === GESTION OWNER ET COULEUR ===
+
+    public void setOwnerAndColor(Integer playerId, String colorHex) {
+        this.ownerPlayerId = playerId;
+        this.color = colorHex != null ? colorHex : "#ffffff";
+    }
+
+    public boolean isOwnedBy(int playerId) {
+        return ownerPlayerId != null && ownerPlayerId == playerId;
+    }
+
+    public boolean isNeutral() {
+        return ownerPlayerId == null;
     }
 
     // === GESTION DES STATISTIQUES DU SECTEUR ===
@@ -226,7 +270,9 @@ public class Sector {
                     String className = classNode.asText();
                     try {
                         classes.add(UnitClass.valueOf(className));
-                    } catch (IllegalArgumentException ignored) {}
+                    } catch (IllegalArgumentException ignored) {
+                        // Classe inconnue, on l'ignore
+                    }
                 }
             }
 
@@ -234,7 +280,7 @@ public class Sector {
                 return null;
             }
 
-            Unit unit = new Unit(experience, name, classes.get(0));
+            Unit unit = new Unit(experience, name, classes.getFirst());
             unit.setId(id);
             unit.setNumber(number);
 
