@@ -17,7 +17,6 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UnitMapper {
@@ -58,7 +57,7 @@ public class UnitMapper {
             List<Equipment> equipments = entity.getEquipments().stream()
                     .map(UnitEquipmentEntity::getEquipment)
                     .map(equipmentMapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
             unit.setEquipments(equipments);
         }
 
@@ -91,11 +90,11 @@ public class UnitMapper {
             List<UnitClass> classes = dto.getClasses().stream()
                     .map(this::fromUnitClassDto)
                     .filter(java.util.Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
             unit.setClasses(classes);
         }
 
-        unit.setInjured(dto.getIsInjured() != null ? dto.getIsInjured() : false);
+        unit.setInjured(dto.getIsInjured());
 
         // Stats
         unit.setAttack(dto.getAttack() != null ? dto.getAttack() : 0.0);
@@ -109,7 +108,7 @@ public class UnitMapper {
         if (dto.getEquipments() != null) {
             List<Equipment> equipments = dto.getEquipments().stream()
                     .map(equipmentMapper::toDomain)
-                    .collect(Collectors.toList());
+                    .toList();
             unit.setEquipments(equipments);
         }
 
@@ -153,7 +152,7 @@ public class UnitMapper {
                         ue.setEquipment(equipmentEntity);
                         return ue;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             entity.setEquipments(unitEquipments);
         }
 
@@ -179,7 +178,7 @@ public class UnitMapper {
         if (unit.getClasses() != null) {
             dto.setClasses(unit.getClasses().stream()
                     .map(this::toUnitClassDto)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         dto.setIsInjured(unit.isInjured());
@@ -196,7 +195,7 @@ public class UnitMapper {
         if (unit.getEquipments() != null) {
             List<EquipmentDto> equipmentDtos = unit.getEquipments().stream()
                     .map(equipmentMapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
             dto.setEquipments(equipmentDtos);
         }
 
